# StockBot

./: config.json  config.py  main.py  pyproject.toml
app/: main.py  settings.py
app/containers/: factories.py  providers.py
app/dtos/: batch.py  product.py
app/exceptions/: base.py  batches.py  products.py
app/handlers/: base.py  batches.py  products.py
app/handlers/converters/: batches.py  products.py
app/schemas/: base.py  batches.py
app/schemas/exceptions/: base.py
app/services/: constants.py  web.py
app/services/converters/: batches.py  products.py
app/services/exceptions/: base.py  batches.py
dtos/: product.py
exceptions/: base.py  products.py
services/: constants.py  web.py
services/converters/: products.py
